<resources>
    <string name="app_name">Apik</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_judul">PLN UPDK Barito APIK</string>
    <string name="aplikasi_izin_kerja">Aplikasi Izin Kerja</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="reset">Reset</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="to_get_started">To get started!</string>
    <string name="atau_login_dengan">atau lanjutkan dengan akun google</string>
    <string name="google">Google</string>
    <string name="nama_perusahaan">Nama Perusahaan</string>
    <string name="izin_kerja_internal">"Ijin Kerja Internal "</string>
    <string name="izin_kerja_eksternal">"Ijin Kerja Eksternal "</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="log_out">Log Out</string>
    <string name="tambah_izin">Tambah Ijin</string>
    <string name="ijin_waiting">Ijin Waiting</string>
    <string name="ijin_finish">Ijin Finish</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="new_version_found_please_update">Versi baru tersedia. Update sekarang?</string>
    <string name="update_app">Update Aplikasi</string>
    <string name="exit">Keluar</string>
    <string name="cari">Cari</string>
    <string name="ijin_closing">Closing</string>
    <string name="edit_password">Ubah Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="tolak">Tolak</string>
    <string name="catatan">Catatan</string>
    <string name="batal">Batal</string>
    <string name="tutup">Tutup</string>
</resources>
