<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:contentDescription="TODO"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_rectangle_45" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:contentDescription="TODO"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_rectangle_46" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login_judul"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/aplikasi_izin_kerja"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_kerja_internal"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/izin_kerja_internal"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="@dimen/button_radius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_kerja_eksternal"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/izin_kerja_eksternal"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="@dimen/button_radius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_edit_profil"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/edit_profil"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="@dimen/button_radius" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="bottom"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="4dp"
                android:text="@string/log_out"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="@dimen/button_radius" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>