<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/catatan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_catatan"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_keterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_batal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/tutup"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:backgroundTint="@color/silver" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_tolak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/tolak"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:backgroundTint="@color/red" />
    </LinearLayout>

</LinearLayout>